# Waiter-Robot

./: README.md
docs/: hardware.md  ros_architecture.md  setup_and_launch.md
robotcontrol/robotcontrol/: EncoderMotor.h  IMUSensor.h  UltrasonicSensor.h  robotcontrol.ino
waiter_robot/ros2_ws_lidar/src/: slam_params.yaml
waiter_robot/ros2_ws_lidar/src/config/: saved_poses.yaml
waiter_robot/ros2_ws_lidar/src/maps/: map.pgm  map.yaml
waiter_robot/ros2_ws_lidar/src/my_nav2/: package.xml  setup.py
waiter_robot/ros2_ws_lidar/src/my_nav2/config/: nav2_params.yaml  nav2_params.yaml.bak
waiter_robot/ros2_ws_lidar/src/my_nav2/launch/: nav2_launch.py
waiter_robot/ros2_ws_lidar/src/my_nav2/rviz/: nav2_custom_view.rviz
waiter_robot/ros2_ws_lidar/src/my_robot/: package.xml  setup.py
waiter_robot/ros2_ws_lidar/src/my_robot/launch/: lidar_launch.py
waiter_robot/ros2_ws_lidar/src/scripts/: amcl_initializer.py  save_pose.py
waiter_robot/ros2_ws_motor/src/config/: ekf.yaml
waiter_robot/ros2_ws_motor/src/odom_broadcaster/: package.xml  setup.cfg  setup.py
waiter_robot/ros2_ws_motor/src/odom_broadcaster/launch/: odom_launch.py
waiter_robot/ros2_ws_motor/src/odom_broadcaster/odom_broadcaster/: odom_broadcaster.py
waiter_robot/ros2_ws_motor/src/robot_call/: package.xml  setup.cfg  setup.py
waiter_robot/ros2_ws_motor/src/robot_call/robot_call/: call_manager.py  mqtt_bridge.py
waiter_robot/ros2_ws_motor/src/robot_description/: package.xml  setup.py
waiter_robot/ros2_ws_motor/src/robot_sensors/: package.xml  setup.py
(+9 files in other folders)
