[develop]
script_dir=$base/lib/robot_call
[install]
install_scripts=$base/lib/robot_call
[options]
packages = find:
install_requires =
    paho-mqtt
zip_safe = false

[options.entry_points]
console_scripts =
    mqtt_bridge = robot_call.mqtt_bridge:main
    call_manager = robot_call.call_manager:main

